--- a/test.html
+++ b/test.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <h1>hello. world</h1>
-    <h1>hello. world one</h1>
-    <h1>hello. world two</h1>
-    <h1>hello. world three</h1>
+    <h1>hello. world 2</h1>
 </body>
 </html>
